# IntegralCalculator

./: .clangd  .gitignore  CMakeLists.txt
src/: approx.hpp  diff.hpp  integral.hpp  main.cpp  utils.cpp  utils.hpp
src/ui/: main_window.cpp  main_window.hpp  utils.hpp
src/ui/pages/: base.cpp  base.hpp  left_rectangles.cpp  left_rectangles.hpp  right_rectangles.cpp  right_rectangles.hpp  simpson.cpp  simpson.hpp  trapezoid.cpp  trapezoid.hpp  variable_step.cpp  variable_step.hpp
src/ui/pages/approx/: base.cpp  base.hpp
src/ui/pages/diff/: base.cpp  base.hpp  euler.cpp  euler.hpp  rungekutta.cpp  rungekutta.hpp
src/ui/pages/integral/: base.cpp  base.hpp  left_rectangles.cpp  left_rectangles.hpp  right_rectangles.cpp  right_rectangles.hpp  simpson.cpp  simpson.hpp  trapezoid.cpp  trapezoid.hpp
src/ui/pages/multiple/: base.cpp  base.hpp  simpson.cpp  simpson.hpp
src/ui/pages/nonlinear/: dichotomy.cpp  dichotomy.hpp  newton.cpp  newton.hpp  secant.cpp  secant.hpp
src/ui/tabs/: base_tab.cpp  base_tab.hpp  left_rectangles.cpp  left_rectangles.hpp  right_rectangles.cpp  right_rectangles.hpp  simpson.cpp  simpson.hpp  trapezoid.cpp  trapezoid.hpp
src/ui/widgets/: chartview.cpp  chartview.hpp  gridwidget.hpp  hboxwidget.hpp  htmlheaderview.hpp  resizablestackedwidget.hpp  vboxwidget.hpp
